Add documentation for todos endpoints
