# src/controllers/todo.ts
@@ -3,104 +3,116 @@ import { getRepository } from 'typeorm';
 import { Todo } from '../entity/todos';
 
 export class TodoController {
-    static async create(req: any, res: any) {
-        try {
-            const {
-                body:
-                { title },
-                user,
-                params: { projectId }
-            } = req;
+ static async create(req: any, res: any) {
+  try {
+   const {
+    body: { title, projectId },
+    user
+   } = req;
 
-            const project = await getRepository(Project).findOne(
-                { id: projectId, user: user.id })
-            if (!project) {
-                return res.status(404).send(
-                    { message: "You don't have a project with given id" }
-                )
-            }
+   const project = await getRepository(Project).findOne({
+    id: projectId,
+    user: user.id
+   });
+   if (!project) {
+    return res
+     .status(404)
+     .send({ message: "You don't have a project with given id" });
+   }
 
-            const todo = await new Todo()
-            // A project should not have more than one similar titles
-            const todoExists = await getRepository(Todo).findOne({ project: projectId, title })
+   const todo = await new Todo();
+   // A project should not have more than one similar titles
+   const todoExists = await getRepository(Todo).findOne({
+    project: projectId,
+    title
+   });
 
-            if (todoExists) throw 'Todo exists'
+   if (todoExists) throw 'Todo exists';
 
-            todo.title = title;
-            todo.project = project;
+   todo.title = title;
+   todo.project = project;
 
-            const results = await getRepository(Todo).save(todo)
+   const results = await getRepository(Todo).save(todo);
 
-            return res.status(201).send(
-                {
-                    id: results.id,
-                    title: results.title,
-                })
-        } catch (error) {
-            return res.status(409).send({ message: "A todo with similar title exists" })
-        }
-    }
+   return res.status(201).send({
+    id: results.id,
+    title: results.title
+   });
+  } catch (error) {
+   return res.status(409).send({ message: 'A todo with similar title exists' });
+  }
+ }
 
-    static async getAll(req: any, res: any) {
-        const { params: { projectId }
-        } = req;
+ static async getAll(req: any, res: any) {
+  const {
+   params: { projectId }
+  } = req;
 
-        const todos = await getRepository(Todo)
-            .find({ project: projectId })
+  const todos = await getRepository(Todo).find({
+   project: projectId
+  });
 
-        return res.status(200).send(
-            todos)
+  return res.status(200).send(todos);
+ }
 
-    }
+ static async getOne(req: any, res: any) {
+  const {
+   params: { todoId }
+  } = req;
+  const todo = await getRepository(Todo).findOne({ id: todoId });
 
-    static async getOne(req: any, res: any) {
-        const { params: { projectId, todoId }
-        } = req;
-        const todo = await getRepository(Todo)
-            .findOne({ project: projectId, id: todoId })
+  if (!todo) {
+   return res.status(404).send({ message: 'No todo found with given todoId' });
+  }
+  return res.status(200).send(todo);
+ }
 
-        if (!todo) {
-            return res
-                .status(404)
-                .send(
-                    { message: 'No todo found with given todoId' }
-                )
-        }
-        return res
-            .status(200)
-            .send(todo)
-    }
-    static async updateTodo(req: any, res: any) {
-        const {
-            params: { projectId, todoId },
-            body: { title, started, finished }
-        } = req;
-        const todo = await getRepository(Todo)
-            .findOne({ project: projectId, id: todoId })
+ static async updateTodo(req: any, res: any) {
+  const {
+   params: { todoId },
+   body: { title }
+  } = req;
+  const todo = await getRepository(Todo).findOne({
+   id: todoId
+  });
 
-        if (!todo) {
-            return res
-                .status(404)
-                .send(
-                    { message: 'No todo found with given todoId' }
-                )
-        }
+  if (!todo) {
+   return res.status(404).send({ message: 'No todo found with given todoId' });
+  }
 
-        // Should not finish todo item before starting it
-        if (!todo.started && finished) {
-            return res
-                .status(403)
-                .send({
-                    message: "Todo item not started can't be finished"
-                })
-        }
-        todo.title = title || todo.title
-        todo.started = (started === undefined ? todo.started : started)
-        todo.finished = (finished === undefined ? todo.finished : finished)
+  todo.title = title || todo.title;
 
-        const result = await getRepository(Todo).save(todo)
-        return res
-            .status(200)
-            .send(result)
-    }
+  const result = await getRepository(Todo).save(todo);
+  return res.status(200).send(result);
+ }
+
+ static async startTodo(req: any, res: any) {
+  const {
+   params: { todoId },
+   body: { started }
+  } = req;
+     if ((typeof started) != typeof true) {
+      return res
+       .status(400)
+       .send({ message: 'Started should be boolaen' });
+     }
+     try {
+   const todo = await getRepository(Todo).findOne({
+    id: todoId
+   });
+
+   if (!todo) {
+    return res.status(404).send({ message: 'No todo found with given Id' });
+   }
+
+   todo.started = started === undefined ? todo.started : started;
+
+   const result = await getRepository(Todo).save(todo);
+   return res.status(200).send(result);
+  } catch (e) {
+      console.log(e)
+      return res.status(500)
+          .send({ message: 'An error occurred. Try again later' })
+  }
+ }
 }
